# bhai-vae-paper

./: .gitignore  CODEBASE.md  NOTEBOOK_SPEC.md  README.md  pyproject.toml  requirements.txt  run_bootstrap_1337.py  run_bootstrap_full.py  run_figures.sh
data/: zeroshot_results.csv  zeroshot_scatter_results_full.csv  zeroshot_scatter_results_with_ci.csv
docs/: README.md  data.md  figures.md  issues.md  models.md  scripts.md  training.md
models/: __init__.py  semisup.pt  unsup.pt  vae.py
notebooks/: bhai_vae_paper.ipynb  paper_figures.ipynb
results/: svm_results.json
scripts/: fig_r2_scatter_with_ci.py  generate_all_figures.py  generate_embeddings.py  generate_figures.py  remake_reconstruction_scatter.py  run_bootstrap.sh  run_svm.py  train_vae.py
