[project]
name = "bhai-vae-paper"
version = "0.1.0"
description = "VAE embeddings for IODP LILY database - paper code and figures"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "catboost>=1.2.0",
    "matplotlib>=3.7.0",
    "umap-learn>=0.5.0",
    "jupyter>=1.0.0",
    "cartopy>=0.22.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]
